--- a/Sistem Keuangan Daarul Jannah/templates/pembayaran.html
+++ b/Sistem Keuangan Daarul Jannah/templates/pembayaran.html
@@ -84,9 +84,11 @@
                                                     </select> &emsp;
                                                     Rp.&ensp;
                                                     <input type="number" id="harga1" placeholder="Masukkan Nominal" style="width:40%">
+                                                    <!-- &ensp; -->
+                                                    <button class="tgh-btn" title="Tambah Tagihan"><i class="fa-solid fa-circle-plus"></i></button>
                                                 </li>
                                             </ul>
-                                            <button class="tgh-btn btn">Tambah Tagihan</button>
+                                            <!-- <button class="tgh-btn btn">Tambah Tagihan</button> -->
                                         </div>
                                     </div>
                                 </div>
