--- a/Sistem Keuangan Daarul Jannah/templates/ubahdatasiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/ubahdatasiswa.html
@@ -24,7 +24,7 @@
                                 <h4 class="in-2">Nama</h4>
                                 <h4>:</h4>
                                 <div class="dtl-style">
-                                    <input type="text" id="floatingInput" placeholder="Masukkan Nama" name="nama_siswa" required value="{{siswa.nama_siswa}}">
+                                    <input type="text" id="nama_siswa" placeholder="Masukkan Nama" name="nama_siswa" required value="{{siswa.nama_siswa}}">
                                 </div>
                             </div>
                                
@@ -33,7 +33,7 @@
                                     <h4 class="in-1">NIS</h4>
                                     <h4>:</h4>
                                     <div class="dtl-style">
-                                        <input type="text" id="floatingInput" placeholder="Masukkan NIS" name="nis" value="{{siswa.nis}}" readonly>
+                                        <input type="text" id="nis" placeholder="Masukkan NIS" name="nis" value="{{siswa.nis}}" readonly>
                                     </div>
                                 </div>
                                 <div class="row detail">
