--- a/Sistem Keuangan Daarul Jannah/templates/tabelsiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/tabelsiswa.html
@@ -19,7 +19,7 @@
             <div class="filter">
                 <div class="filter-kiri">
                     <select class="filter-tingkat" id="filter-tingkat" onchange="filterTingkat()" title="Filter Tingkat Pendidikan">
-                        <option value="Tingkat" disabled selected>Tingkat</option>
+                        <option value="Tingkat" disabled selected hidden>Tingkat</option>
                         <option value="TK">TK</option>
                         <option value="SD" >SD</option>
                         <option value="SMP">SMP</option>
