--- a/Sistem Keuangan Daarul Jannah/templates/tambahdatapegawai.html
+++ b/Sistem Keuangan Daarul Jannah/templates/tambahdatapegawai.html
@@ -141,14 +141,14 @@
                                     <h4 class="in-1">Username</h4>
                                     <h4>:</h4>
                                     <div class="dtl-style">
-                                        <input type="text" id="username" placeholder="Masukkan Username" name="username" disabled>
+                                        <input type="text" id="username" placeholder="Masukkan Username" name="username" minlength="4" disabled>
                                     </div>
                                 </div>
                                 <div class="row detail" style="margin-bottom:10px">
                                     <h4 class="in-1">Password</h4>
                                     <h4>:</h4>
                                     <div class="dtl-style">
-                                        <input type="text" id="password" placeholder="Masukkan Password" name="password" disabled>
+                                        <input type="text" id="password" placeholder="Masukkan Password" name="password" minlength="8" disabled>
                                     </div>
                                 </div>
                                 <div class="row detail" style="margin-bottom:10px">
